# secure-frame-rs

./: CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE.spdx  README.md  bom.xml  deny.toml  git-cliff.toml  release-plz.toml
.github/workflows/: audit.yml  build_test.yml  ci.yml  ci_cd.yml  deny.yml  pull-request.yml  release.yml
benches/: bench_main.rs  crypto.rs  header_parsing.rs
examples/: encrypt_decrypt.rs  generate_headers.rs
src/: error.rs  frame.rs  frame_count_generator.rs  frame_validation.rs  lib.rs  receiver.rs  sender.rs  test_vectors.rs  util.rs
src/api/: buffer.rs  encrypted.rs  key.rs  mod.rs  unencrypted.rs
src/crypto/: aead.rs  cipher_suite.rs  key_derivation.rs  key_expansion.rs  mod.rs  secret.rs
src/crypto/openssl/: aead.rs  key_derivation.rs  key_expansion.rs  mod.rs  tag.rs
src/crypto/ring/: aead.rs  key_derivation.rs  key_expansion.rs  mod.rs
src/header/: basic_header.rs  config_byte.rs  extended_header.rs  frame_count.rs  frame_counter.rs  frame_validation.rs  header_field.rs  keyid.rs  mod.rs  util.rs
src/test_vectors/: mod.rs  test-vectors.json
tests/: integration.rs
utils/test_vectors/: Cargo.toml
utils/test_vectors/src/: lib.rs
utils/update_version/: Cargo.toml
utils/update_version/src/: main.rs
