[package]
name = "sframe"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"

authors = [
  "Tobias Waurick <tobias.waurick@goto.com>",
  "Hendrik Sollich <hendrik.sollich@goto.com>",
  "Richard Haehne <richard.haehne@goto.com>",
]
description = "pure rust implementation of SFrame draft-ietf-sframe-enc-00"
repository = "https://github.com/goto-opensource/sframe-rs"
documentation = "https://docs.rs/sframe/"
readme = "README.md"

keywords = ["encryption", "sframe", "secure-frame", "webrtc"]

[dependencies]
bitfield = "0.14"
log = "0.4"
thiserror = "1.0"

[dependencies.ring]
version = "0.16"

[dev-dependencies]
criterion = { version= "0.4", features=["html_reports"] }
hex = "0.4"
pretty_assertions = "1.3"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"


[features]
default = []
wasm-bindgen = ["ring/wasm32_c"]

[[bench]]
name = "bench_main"
harness = false
