[package]
edition = "2021"
license = "MIT/Apache-2.0"
name = "sframe"
version = "0.2.3"

authors = [
  "Tobias Waurick <tobias.waurick@goto.com>",
  "Hendrik Sollich <hendrik.sollich@goto.com>",
  "Richard Haehne <richard.haehne@goto.com>",
]

description = "pure rust implementation of SFrame draft-ietf-sframe-enc-01"
repository = "https://github.com/goto-opensource/sframe-rs"
documentation = "https://docs.rs/sframe/"
readme = "README.md"

keywords = ["encryption", "sframe", "secure-frame", "webrtc"]

[dependencies]
bitfield = "0.14"
cfg-if = "1.0"
log = "0.4"
thiserror = "1.0"

[dependencies.ring]
version = "0.17"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"], optional = true }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
pretty_assertions = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.25"
test-case = "3.1.0"

[features]
default = ["ring"]

[[bench]]
name = "bench_main"
harness = false
